<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.algolstudio.idadealienigena.IdadeAlien">

    <EditText
        android:id="@+id/hora"
        android:layout_width="147dp"
        android:layout_height="38dp"
        android:layout_marginEnd="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="0dp"
        android:focusable="false"
        android:inputType="none"
        android:text="@string/horaInputada"
        android:textAlignment="center"
        android:textSize="14sp"
        ads:layout_constraintLeft_toLeftOf="@+id/guideline4"
        ads:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toBottomOf="@+id/data"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/data" />

    <EditText
        android:id="@+id/data"
        android:layout_width="147dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:focusable="false"
        android:inputType="none"
        android:text="@string/diaInputado"
        android:textAlignment="center"
        android:textSize="14sp"
        ads:layout_constraintBottom_toBottomOf="@+id/guideline2"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintRight_toLeftOf="@+id/guideline5"
        ads:layout_constraintVertical_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:text="@string/nascimento"
        android:textAlignment="center"
        android:textColor="#66A"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        ads:layout_constraintGuide_percent="0.52" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        ads:layout_constraintGuide_percent="0.48" />

    <TextView
        android:id="@+id/textData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        ads:layout_constraintHorizontal_bias="0.0"
        ads:layout_constraintTop_toBottomOf="@+id/data"
        app:layout_constraintLeft_toLeftOf="@+id/data"
        app:layout_constraintRight_toRightOf="@+id/data" />

    <TextView
        android:id="@+id/textHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/horario"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintTop_toBottomOf="@+id/hora"
        app:layout_constraintLeft_toLeftOf="@+id/hora"
        app:layout_constraintRight_toRightOf="@+id/hora" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        ads:layout_constraintGuide_percent="0.88"
        android:orientation="horizontal" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        ads:layout_constraintGuide_percent="0.41" />

    <TextView
        android:id="@+id/textMercurio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/mercurio"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="18sp"
        ads:layout_constraintBottom_toTopOf="@+id/guideline"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toLeftOf="@+id/guideline5"
        ads:layout_constraintTop_toTopOf="@+id/guideline2"
        ads:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textVenus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/venus"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="18sp"
        ads:layout_constraintBottom_toTopOf="@+id/guideline"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toLeftOf="@+id/guideline5"
        ads:layout_constraintTop_toTopOf="@+id/guideline2"
        ads:layout_constraintVertical_bias="0.17"
        />

    <TextView
        android:id="@+id/textMarte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/marte"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="18sp"
        ads:layout_constraintBottom_toTopOf="@+id/guideline"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toLeftOf="@+id/guideline5"
        ads:layout_constraintTop_toTopOf="@+id/guideline2"
        ads:layout_constraintVertical_bias="0.33" />

    <TextView
        android:id="@+id/textJupiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/jupiter"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="18sp"
        ads:layout_constraintBottom_toTopOf="@+id/guideline"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toLeftOf="@+id/guideline5"
        ads:layout_constraintTop_toTopOf="@+id/guideline2"
        ads:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textSaturno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/saturno"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="18sp"
        ads:layout_constraintBottom_toTopOf="@+id/guideline"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toLeftOf="@+id/guideline5"
        ads:layout_constraintTop_toTopOf="@+id/guideline2"
        ads:layout_constraintVertical_bias="0.67" />

    <TextView
        android:id="@+id/textUrano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/urano"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="18sp"
        ads:layout_constraintBottom_toTopOf="@+id/guideline"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toLeftOf="@+id/guideline5"
        ads:layout_constraintTop_toTopOf="@+id/guideline2"
        ads:layout_constraintVertical_bias=".83" />

    <TextView
        android:id="@+id/Mercurio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textColor="#00F"
        android:textSize="18sp"
        ads:layout_constraintBottom_toTopOf="@+id/guideline"
        ads:layout_constraintHorizontal_bias="0.500"
        ads:layout_constraintLeft_toLeftOf="@+id/guideline4"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toTopOf="@+id/guideline2"
        ads:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Venus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textColor="#00F"
        android:textSize="18sp"
        ads:layout_constraintBottom_toTopOf="@+id/guideline"
        ads:layout_constraintHorizontal_bias="0.500"
        ads:layout_constraintLeft_toLeftOf="@+id/guideline4"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toTopOf="@+id/guideline2"
        ads:layout_constraintVertical_bias="0.17" />

    <TextView
        android:id="@+id/Marte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textColor="#00F"
        android:textSize="18sp"
        ads:layout_constraintBottom_toTopOf="@+id/guideline"
        ads:layout_constraintHorizontal_bias="0.500"
        ads:layout_constraintLeft_toLeftOf="@+id/guideline4"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toTopOf="@+id/guideline2"
        ads:layout_constraintVertical_bias="0.33" />

    <TextView
        android:id="@+id/Jupiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textColor="#00F"
        android:textSize="18sp"
        ads:layout_constraintBottom_toTopOf="@+id/guideline"
        ads:layout_constraintHorizontal_bias="0.500"
        ads:layout_constraintLeft_toLeftOf="@+id/guideline4"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toTopOf="@+id/guideline2"
        ads:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/Saturno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textColor="#00F"
        android:textSize="18sp"
        ads:layout_constraintBottom_toTopOf="@+id/guideline"
        ads:layout_constraintHorizontal_bias="0.500"
        ads:layout_constraintLeft_toLeftOf="@+id/guideline4"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toTopOf="@+id/guideline2"
        ads:layout_constraintVertical_bias="0.67" />

    <TextView
        android:id="@+id/Urano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textColor="#00F"
        android:textSize="18sp"
        ads:layout_constraintBottom_toTopOf="@+id/guideline"
        ads:layout_constraintHorizontal_bias="0.500"
        ads:layout_constraintLeft_toLeftOf="@+id/guideline4"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toTopOf="@+id/guideline2"
        ads:layout_constraintVertical_bias=".83" />

    <TextView
        android:id="@+id/Netuno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textColor="#00F"
        android:textSize="18sp"
        ads:layout_constraintBottom_toTopOf="@+id/guideline"
        ads:layout_constraintHorizontal_bias="0.500"
        ads:layout_constraintLeft_toLeftOf="@+id/guideline4"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toTopOf="@+id/guideline2"
        ads:layout_constraintVertical_bias="1" />

    <TextView
        android:id="@+id/textNeturno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/netuno"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="18sp"
        ads:layout_constraintBottom_toTopOf="@+id/guideline"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toLeftOf="@+id/guideline5"
        ads:layout_constraintTop_toTopOf="@+id/guideline2"
        ads:layout_constraintVertical_bias="1"
        />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="horizontal"
        ads:layout_constraintGuide_percent="0.12" />

    <TextView
        android:id="@+id/idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/anos"
        android:textColor="#484"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textMercurio"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/planeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/planeta"
        android:textColor="#484"
        android:textSize="22sp"
        android:textStyle="bold"
        ads:layout_constraintBottom_toTopOf="@+id/textMercurio"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toLeftOf="@+id/guideline5"
        ads:layout_constraintTop_toTopOf="@+id/guideline6"
        ads:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline6"
        app:layout_constraintGuide_percent="0.31"
        android:orientation="horizontal"
        />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline7"
        app:layout_constraintGuide_percent="0.12"
        android:orientation="horizontal"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        tools:layout_constraintBottom_creator="1"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
